--- a/package.json
+++ b/package.json
@@ -6,17 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write .",
+    "lint": "stylelint '**/*.{css,scss}' --fix"
   },
   "dependencies": {
     "matter-js": "^0.19.0",
     "solid-js": "^1.8.14"
   },
   "devDependencies": {
+    "@types/bun": "latest",
     "@types/matter-js": "^0.19.6",
     "sass": "^1.71.0",
+    "stylelint": "^16.2.1",
+    "stylelint-config-standard-scss": "^13.0.0",
+    "stylelint-prettier": "^5.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vite-plugin-solid": "^2.9.1"
-  }
+  },
+  "module": "index.ts"
 }
